# jpos-settings

./: CMakeLists.txt  Main.qml  main.cpp
.reuse/: dep5
